# pybird

./: .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  PKG-INFO  README  README.md  __init__.py  index.html  mkdocs.yml  pybird.py  pyproject.toml  search.html  setup.py  sitemap.xml  tests.py  tox.ini
.github/: tests.yml
.github/workflows/: ci.yml  codeql.yml  tests.yml
Ctl/: config.yaml  requirements-docs.txt  requirements-tests.txt  requirements.txt
docs/: examples.md  field-lists.md  testing.md
examples/: index.html
facsimile/: VERSION  requirements-test.txt  requirements.txt
field-lists/: index.html
pybird/: __init__.py
search/: search_index.json
testing/: index.html
tests/: conftest.py  filedata.py  test_config.py  test_datetime.py  test_parsing.py  test_regex.py  test_socket.py
tests/data/commands/show_protocols/: 000.input
tests/data/commands/show_protocols_all/: 000.expected  000.input
tests/data/commands/show_protocols_all_"HAMSTER"/: 000.input
tests/data/commands/show_protocols_all_"PS1"/: 000.input
tests/data/commands/show_protocols_all_"PS2"/: 000.input
tests/data/commands/show_route_all/: 000.input
tests/data/commands/show_route_all_protocol_PS1/: 000.input
tests/data/commands/show_route_all_protocol_PS99/: 000.input
tests/data/commands/show_route_all_table_T_peer_export_peer/: 000.expected  000.input
tests/data/commands/show_route_for_8.8.8.8_all_protocol_peer/: 000.expected  000.input
tests/data/commands/show_route_table_T_PS1_all_protocol_PS1/: 000.input
tests/data/commands/show_status/: 000.expected  000.input  bird-1.6.expected  bird-1.6.input
tests/data/config/: basic.conf
tests/data/parse/route/data/: all000.expected  all000.input  example.expected  example.input  ipv6_table.expected  ipv6_table.input
tests/data/parse/status/: 000.expected  bird-1.6.expected  bird-2.0.8.expected  bird-2.0.8.input  bird-2.0.expected  bird-2.0.input
