[tool.poetry]
name = "pybird"
version = "1.1.2"
description = "BIRD interface handler for Python"
readme = "README.md"
repository = "https://github.com/20c/pybird"
authors = ["20C <code@20c.com>", "Sasha Romijn <github@mxsasha.eu>"]
license = "Apache-2.0"

packages = [{ include = "pybird" }]

[tool.poetry.dependencies]
python = "^3.7"
future = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
